Probably-easy TODO list:
	Remove Labyrinths, because boring(?)
	Tweak Sorcery miscast effects (maybe have one be a magic resistance halving)
	Revert Okawaru nerf
	Remove 'monstrous' demonspawn


Harder TODO list:
	Tweak silent spectre, give Mennas a few holy-flavored ones as pets
		Specifically: Reduce spectre melee attack to negligible levels,
		give them crazy speed, have them cast Silence rather than keep
		a permanent aura.  Skeletal warrior packs past a certain point
		get a chance at having them.
	Nerf Mennas' defense.  Make him rely on his pets for Silence.
	Make Shoals a portal vault
	Make Invisibility more viable late-game/extended
		Reduce some See Invisible enemies to merely Sense Invisible, or no
		invisibility detection at all
	Put a HP-indicator face next to the player's large HP bar, to make the new system more intuitive


Long-term TODO list:
	Redo scoring system to induce experts to play hyperagressively
	Phase out paralysis in favor of a suite of new status effects
	Restore square spell ranges (This actually looks really hard)
	Reduce game length by 1/3 outside of extended endgame
		There are subtle balance issues involved!
		

Changes already made:
	Monsters may no longer invoke Zot traps against the player.
	Charms, Hexes, and Poison Magic reshuffled into Enchantments and Sorcery.  Some books consequently changed.
		Aptitude changes:
			High Elf:
				-2 Poison Magic to 1 Sorcery (Yes, I know this is a buff.)
			Halfling:
				0 Enchantments to -1; -1 Poison Magic to 0 Sorcery.
			Centaur:
				-2 Poison Magic to -1 Sorcery
			Spriggan:
				0 Poison Magic to +2 Sorcery
			Vampire:
				1 Enchantments to 0; -1 Poison Magic to 1 Sorcery.
	Haste and Slow nerf reverted.
	Crude hack in mon-place.cc to make Mennas not spawn.  Will remove when Mennas tweaked.
	Spell success rate now shown as an actual percentage, not an adjective.  Success >= 98% rounded up to 100%.
	Replaced Silence with Haste in the book of War Chants.