@@ -81,8 +81,8 @@ enum ability_type
     ABIL_YRED_ANIMATE_REMAINS_OR_DEAD,
     // Xom, Vehumet = 90
     // Okawaru
-    ABIL_OKAWARU_HEROISM = 100,
-    ABIL_OKAWARU_FINESSE,
+    ABIL_OKAWARU_MIGHT = 100,
+    ABIL_OKAWARU_HASTE,
     // Makhleb
     ABIL_MAKHLEB_MINOR_DESTRUCTION = 110,
     ABIL_MAKHLEB_LESSER_SERVANT_OF_MAKHLEB,
